Set conditional to any makes StopIfPRNotOpen work. Keep history for fun, but we don't want to see a build failure when all is working as expected

--- a/codefresh.yaml
+++ b/codefresh.yaml
@@ -52,7 +52,7 @@ steps:
       - exit 1
     when:
       condition:
-        all:
+        any:
           prClosed: '"${{CF_PR_STATE}}" == "CLOSED"'
           prMerged: '"${{CF_PR_STATE}}" == "MERGED"'
 
