Move codeblock to new image r6by/cf-helm-export

--- a/codefresh.yaml
+++ b/codefresh.yaml
@@ -77,25 +77,14 @@ steps:
       - |-
         kubectl config use-context ${KUBE_CONTEXT}
         helm install go-hello/ --namespace=${NAMESPACE} --name ${RELEASE_NAME} --set image.repository=${IMAGE_REPOSITORY} --set image.tag=${IMAGE_TAG}
-        SERVICE_NAME=${RELEASE_NAME}-go-hello
-        # @todo Make wait time an ENV-based configuration.
-        WAIT=$((SECONDS+30))
-        SERVICE_IP=""
-        while [ -z "$SERVICE_IP" ] && [ "$SECONDS" -lt "$WAIT" ]
-        do
-          sleep 10
-          echo -e "Service IP is still pending. Waiting..."
-          SERVICE_IP=$(kubectl get svc --namespace ${NAMESPACE} ${SERVICE_NAME} -o jsonpath='{.status.loadBalancer.ingress[0].ip}')
-        done
-        echo "SERVICE_IP=${SERVICE_IP}" >> ${CF_VOLUME_PATH}/env_vars_to_export
-        echo "Exported SERVICE_IP ${SERVICE_IP}"
-        HELM_URL=http://${SERVICE_IP}:${PORT}
-        echo "HELM_URL=${HELM_URL}" >> ${CF_VOLUME_PATH}/env_vars_to_export
-        echo "Exported HELM_URL ${HELM_URL}"
     when:
       condition:
         all:
           prOpen: '"${{CF_PR_STATE}}" == "OPEN"'
+
+  CFHelmExport:
+    title: Export Helm vars
+    image: r6by/cf-helm-export
 
   GitHubSetDeployStatus:
     title: Set PR deployment status to "success"
@@ -109,7 +98,7 @@ steps:
       - GITHUB_CONTEXT=PR Release
       - GITHUB_STATE=success
       - GITHUB_DESCRIPTION=Deployed to ${{NAMESPACE}} namespace
-      # See InstallChart step.
+      # See CFHelmExport step.
       - GITHUB_TARGET_URL=${{HELM_URL}}
     when:
       condition:
