--- a/codefresh.yaml
+++ b/codefresh.yaml
@@ -163,3 +163,19 @@ steps:
         all:
           prOpen: '"${{CF_PR_STATE}}" == "OPEN"'
           helmURL: '"${{HELM_URL}}" != ""'
+
+  # Optionally send Slack notification by setting SLACK_WEB_URL ENV var in
+  # Codefresh UI.
+  slack_notify:
+    title: Slack notification
+    image: tutum/curl
+    environment:
+      - DATA="{\"text\":\"PR ${CF_PR_NUMBER} deployed to ${HELM_URL}\"}"
+    commands:
+      - curl -X POST --data-urlencode "payload=${DATA}" ${SLACK_WEB_URL}
+    when:
+      condition:
+        all:
+          prOpen: '"${{CF_PR_STATE}}" == "OPEN"'
+          helmURL: '"${{HELM_URL}}" != ""'
+          webhookSet: '"${{SLACK_WEB_URL}}" != ""'
